javaDSL/src/test/resources/typeSystemTestModels/valid/constructors/ConstructorNoDuplicateModifier.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.constructors;

public class ConstructorNoDuplicateModifier {

  public ConstructorNoDuplicateModifier(){

  }
}
