javaDSL/src/test/resources/typeSystemTestModels/invalid/enums/EnumMayNotBeAbstract.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.enums;

abstract enum EnumMayNotBeAbstract{

}
